fixed broken urls

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-.DS_STORE
+# Generated files
+.docusaurus
+.cache-loader
+
+
+# Production
+build
+dist
+
+
+# Dependencies
 node_modules
+
+
+.DS_STORE
 scripts/flow/*/.flowconfig
 .flowconfig
 *~
@@ -7,7 +20,6 @@ scripts/flow/*/.flowconfig
 .grunt
 _SpecRunner.html
 __benchmarks__
-build/
 remote-repo/
 coverage/
 .module-cache
