--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@hotjar/browser": "^1.0.9",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.1.1",
