--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@hotjar/browser": "^1.0.9",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-hotjar": "^0.0.2",
     "docusaurus-plugin-image-zoom": "^0.1.1",
     "docusaurus-plugin-sass": "^0.2.2",
     "postcss": "^8.4.14",
